cmake_minimum_required(VERSION 3.10)
project(OS)
add_compile_options(--std=c++20)
include_directories(./include)
add_executable(disk_manage src/disk_manage.cpp )
add_executable(file_manage src/file_system.cpp )
add_executable(memory_manage src/memory_manage.cpp )
add_executable(server src/server.cpp )
add_executable(client src/client.cpp)
add_executable(test src/test.cpp)
add_executable(main src/main.cpp)
add_executable(create_process src/create_process.cpp)
add_executable(execute_process src/execute_process.cpp)
add_executable(delete src/delete_process.cpp)
